# mumuai-novel-skills

./: .env.example  .gitignore  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
.claude/agents/: mumu-showrunner.md
docs/: openclaw-multi-agent-guide.md  openclaw-multi-agent-guide.zh-CN.md
docs/plans/: 2026-03-27-clawhub-runtime-compatibility.md
scripts/: bind_project.py  client.py  manage_memory.py  trigger_batch.py
tests/: test_bind_project.py  test_workflow_semantics.py
