[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mumu-openclaw-skills"
version = "1.0.2"
description = "Auto-Showrunner Agent Skills for MuMuAINovel"
readme = "README.md"
authors = [
    { name = "Nicholas Kevin", email = "crypto2042@outlook.com" }
]
license = { text = "GPL-3.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests"
]

[project.urls]
"Homepage" = "https://github.com/crypto-2042/mumu-openclaw-skills"
"Bug Tracker" = "https://github.com/crypto-2042/mumu-openclaw-skills/issues"
